apps/v0/run/core-hasura/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: core-hasura
    hasuraService: custom
  name: core-hasura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: core-hasura
  template:
    metadata:
      labels:
        app: core-hasura
    spec:
      containers:
      - image: hasura/graphql-engine:v2.29.0
        imagePullPolicy: IfNotPresent
        name: core-hasura
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
