apps/v0/run/core-hasura/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: core-hasura
  name: core-hasura
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: core-hasura
  type: ClusterIP
